removed a bug causing an x-scrollbar to appear

--- a/view/src/css/App.css
+++ b/view/src/css/App.css
@@ -51,6 +51,7 @@ body {
 .mainColumn {
     flex: 1;
     overflow-y: scroll;
+    overflow-x: hidden !important;
     color: white;
 }
 
